--- a/Cats/MainWindow.xaml
+++ b/Cats/MainWindow.xaml
@@ -10,11 +10,12 @@
         <Rectangle Fill="#FFE0E0E0" HorizontalAlignment="Left" Height="345.6" Margin="-1.4,-0.3,0,0" Stroke="Black" VerticalAlignment="Top" Width="297.6"/>
 
         <Button x:Name="Registration" Content="Registration" HorizontalAlignment="Left" Margin="62.2,260.1,0,0" VerticalAlignment="Top" Width="171" Height="48.76" Background="#FFC25454" BorderBrush="Black" FontSize="25" FontFamily="Yu Gothic UI" FontWeight="Bold" Click="Registration_Click" />
-        <Button x:Name="Log_in" Content="Log in" HorizontalAlignment="Left" Margin="62.2,195.54,0,0" VerticalAlignment="Top" Width="171" Height="46.36" FontFamily="Yu Gothic UI" FontSize="25" FontWeight="Bold" Background="#FF5FB760" />
+        <Button x:Name="Log_in" Content="Log in" HorizontalAlignment="Left" Margin="62.2,195.54,0,0" VerticalAlignment="Top" Width="171" Height="46.36" FontFamily="Yu Gothic UI" FontSize="25" FontWeight="Bold" Background="#FF5FB760" Click="Log_in_Click" />
         <Label Content="Login:" HorizontalAlignment="Left" Margin="33.4,20.4,0,0" VerticalAlignment="Top" Width="64.643" FontFamily="Yu Gothic UI" FontSize="20"/>
         <Label HorizontalAlignment="Left" Margin="33.4,114,0,0" VerticalAlignment="Top" FontFamily="Yu Gothic UI" FontSize="20" Content="Password:"/>
-        <PasswordBox HorizontalAlignment="Left" Margin="33.4,155.6,0,0" VerticalAlignment="Top" FontFamily="Yu Gothic UI" FontSize="20" Width="199.8"/>
-        <TextBox x:Name="User_name" HorizontalAlignment="Left" Height="32.6" Margin="33.4,62,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="199.8" FontFamily="Yu Gothic UI" FontSize="20" Text="{DynamicResource Text}"/>
+        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="33.4,155.6,0,0" VerticalAlignment="Top" FontFamily="Yu Gothic UI" FontSize="20" Width="199.8"/>
+        <TextBox x:Name="Login" HorizontalAlignment="Left" Height="32.6" Margin="33.4,62,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="199.8" FontFamily="Yu Gothic UI" FontSize="20" Text="{DynamicResource Text}"/>
+        <Label x:Name="Wrong_entrance" Content="Wrong login or password" HorizontalAlignment="Left" Margin="49,4,0,0" VerticalAlignment="Top" Width="174" FontSize="14" FontWeight="Bold" Visibility="Collapsed"/>
 
     </Grid>
 </Window>
