--- a/Cats/AccessRegistration.xaml
+++ b/Cats/AccessRegistration.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View"
         mc:Ignorable="d"
-        Title="AccessRegistration" Height="172.305" Width="450.372">
+        Title="AccessRegistration" Height="172.305" Width="450.372" Background="#FFE0E0E0">
     <Grid Margin="0,0,-0.4,233">
         <Label Content="Do you want to register this user?" HorizontalAlignment="Left" Height="65" Margin="28,16,0,-81" VerticalAlignment="Top" Width="402" FontSize="25"/>
-        <Button x:Name="Access" Content="YES" HorizontalAlignment="Left" Height="40" Margin="46,74,0,-114" VerticalAlignment="Top" Width="159" Click="Access_Click"/>
-        <Button x:Name="Reject" Content="NO" HorizontalAlignment="Left" Height="40" Margin="246,74,0,-114" VerticalAlignment="Top" Width="159" Click="Reject_Click"/>
+        <Button x:Name="Access" Content="YES" HorizontalAlignment="Left" Height="40" Margin="46,74,0,-114" VerticalAlignment="Top" Width="159" Click="Access_Click" Background="#FF5FB760"/>
+        <Button x:Name="Reject" Content="NO" HorizontalAlignment="Left" Height="40" Margin="246,74,0,-114" VerticalAlignment="Top" Width="159" Click="Reject_Click" Background="#FFC25454"/>
 
     </Grid>
 </Window>
