--- a/Cats/UserProfiler.xaml
+++ b/Cats/UserProfiler.xaml
@@ -8,15 +8,21 @@
         Title="UserProfiler" Height="450" Width="800">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="420" Margin="0,0,-0.4,0" Stroke="Black" VerticalAlignment="Top" Width="794"/>
-        <Button x:Name="AddFeeder" Content="Add new bowl" HorizontalAlignment="Left" Margin="163,282,0,0" VerticalAlignment="Top" Width="215" Height="61" BorderBrush="Black" Foreground="Black" Background="#FFA2DDB0" FontFamily="Yu Gothic UI" FontSize="20" Click="AddFeeder_Click"/>
-        <Rectangle HorizontalAlignment="Left" Height="310.8" Margin="411.4,53.1,0,0" Stroke="Black" VerticalAlignment="Top" Width="249.6" Fill="#FFEDFFEC"/>
-        <ScrollViewer HorizontalAlignment="Left" Height="100" Margin="429.4,242.58,0,0" VerticalAlignment="Top" Width="206.8" Content="Logs of feeder" FontFamily="Yu Gothic UI" FontSize="20"/>
+        <Button x:Name="AddFeeder" Content="Add new bowl" HorizontalAlignment="Left" Margin="26,282,0,0" VerticalAlignment="Top" Width="215" Height="61" BorderBrush="Black" Foreground="Black" Background="#FFA2DDB0" FontFamily="Yu Gothic UI" FontSize="20" Click="AddFeeder_Click"/>
+        <ScrollViewer HorizontalAlignment="Left" Height="100" Margin="276,243,0,0" VerticalAlignment="Top" Width="207" Content="Logs of feeder" FontFamily="Yu Gothic UI" FontSize="20"/>
         <Button Content="Mail" HorizontalAlignment="Left" Margin="10,381,0,0" VerticalAlignment="Top" Width="74" Height="29" FontFamily="Yu Gothic UI" FontSize="20" Background="#FFB93737"/>
-        <Button Content="Log out" HorizontalAlignment="Left" Margin="689,10,0,0" VerticalAlignment="Top" Width="95" Height="29" Background="#FFC25454" BorderBrush="Black" FontSize="20" FontFamily="Yu Gothic UI"/>
-        <DataGrid x:Name="Feeders" HorizontalAlignment="Left" Height="212" Margin="163,55,0,0" VerticalAlignment="Top" Width="215" Background="#FFF7ECEC" Opacity="0.8" BorderBrush="#FF7295B7" SelectionChanged="Feeders_SelectionChanged" ItemsSource="{Binding Path=Customers}"
+        <Button x:Name="LogOut" Content="Log out" HorizontalAlignment="Left" Margin="689,10,0,0" VerticalAlignment="Top" Width="95" Height="29" Background="#FFC25454" BorderBrush="Black" FontSize="20" FontFamily="Yu Gothic UI" Click="LogOut_Click"/>
+        <DataGrid x:Name="Feeders" HorizontalAlignment="Left" Height="212" Margin="26,53,0,0" VerticalAlignment="Top" Width="215" Background="#FFEDFFEC" Opacity="0.8" BorderBrush="#FF7295B7" SelectionChanged="Feeders_SelectionChanged" ItemsSource="{Binding Path=Customers}"
                   SelectedItem="{Binding Path=SelectedCustomer, Mode=TwoWay}"/>
-        <DataGrid x:Name="Tags" HorizontalAlignment="Left" Height="145.6" Margin="429.4,59.4,0,0" VerticalAlignment="Top" Width="206.8" Background="#FFEDFFEC"/>
-        <Button x:Name="AddTag" Content="Add tag" HorizontalAlignment="Left" Height="29.6" Margin="429.4,210,0,0" VerticalAlignment="Top" Width="177.467" Cursor="Hand" Click="AddTag_Click">
+        <DataGrid x:Name="Tags" HorizontalAlignment="Left" Height="153" Margin="276,53,0,0" VerticalAlignment="Top" Width="207" Background="#FFEDFFEC" SelectionChanged="Tags_SelectionChanged" ItemsSource="{Binding Path=Customers}"
+                  SelectedItem="{Binding Path=SelectedCustomer, Mode=TwoWay}"/>
+        <Button x:Name="AddTag" Content="Add tag" HorizontalAlignment="Left" Height="29" Margin="276,211,0,0" VerticalAlignment="Top" Width="177" Cursor="Hand" Click="AddTag_Click">
+            <Button.Background>
+                <ImageBrush ImageSource="D:\лабы универ\лабы шарпы\FatCat\add_tag_button.jpg"/>
+            </Button.Background>
+        </Button>
+        <DataGrid HorizontalAlignment="Left" Height="228" Margin="521,53,0,0" VerticalAlignment="Top" Width="222" Background="#FFEDFFEC"/>
+        <Button x:Name="AddTag_Copy" Content="Add tag" HorizontalAlignment="Left" Height="29" Margin="521,290,0,0" VerticalAlignment="Top" Width="177" Cursor="Hand" Click="AddTag_Click">
             <Button.Background>
                 <ImageBrush ImageSource="D:\лабы универ\лабы шарпы\FatCat\add_tag_button.jpg"/>
             </Button.Background>
